--- a/index.html
+++ b/index.html
@@ -89,25 +89,24 @@
 
     <hr class="m-0">
 
-    <!-- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
+            <h3 class="mb-0">Mentor</h3>
             <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <p>LAB8 is a talent incubator for self-directed learners who want to become proficient programmers and developers. As a mentor, I have the mission of providing them with technical support and reviews for the projects they are building in order to complete a tech portfolio.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">September 2019 - Present</span>
           </div>
         </div>
       </div>
-
     </section>
 
-    <hr class="m-0"> -->
+    <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
