--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Mentor</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>LAB8 is a talent incubator for self-directed learners who want to become proficient programmers and developers. As a mentor, I have the mission of providing them with technical support and reviews for the projects they are building in order to complete a tech portfolio.</p>
+            <div class="subheading mb-3">LAB8</div>
+            <p><strong>LAB8</strong> is a talent incubator for self-directed learners who want to become proficient programmers and developers. As a mentor, I have the mission of providing them with technical support and reviews for the projects they are building in order to complete a tech portfolio.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2019 - Present</span>
