--- a/index.html
+++ b/index.html
@@ -115,11 +115,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Laval University</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Software Engineering Track</div>
+            <div class="subheading">Bachelor of Science</div>
+            <div>Computer Science</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">September 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Laval University</h3>
+            <div class="subheading">MBA</div>
+            <div>Agricultural Business</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2013 - July 2015</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Sup'Agro</h3>
+            <div class="subheading">Bachelor of Engineering</div>
+            <div>Agricultural Engineering</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2009 - July 2013</span>
           </div>
         </div>
       </div>
