--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <p class="lead mb-5">I am a Full Stack Developer, passionated about learning and delivering value. I have a great interest for fintech in general and more precisely financial inclusion, thanks to blockchain and data analytics.</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/kolawol%C3%A9-anthony-ogounchi-79543415b/" target= "_blank">
+          <a href="https://www.linkedin.com/in/anthony-ogounchi-79543415b/" target= "_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/woleogounchi" target= "_blank">
